Changed animation to zoom to prevent word-wrapping.

--- a/style.css
+++ b/style.css
@@ -52,15 +52,9 @@ main {
 }
 
 .content-container-outer {
-  width: 200px;
-  height: 200px;
-}
-
-@media only screen and (min-width: 768px) {
-  .content-container-outer {
-    width: 250px;
-    height: 250px;
-  }
+  width: 33.33vw;
+  height: 33.33vw;
+  background-color: #FFF; /* Ideally each .content-container-outer should have a matching bg color. */
 }
 
 .content-container-inner {
@@ -69,7 +63,9 @@ main {
   height: inherit;
   cursor: pointer;
   box-shadow: 0 0 5px #333;
+  overflow:scroll;
 }
+
 
 #info-1 {
   background-color: rgb(255,255,255);
@@ -99,7 +95,8 @@ main {
 }
 
 .content-container-inner[data-open] {
-  padding: 25px;
+  padding: 40px;
+  /* aniimate back down to 25px. */
 }
 
 
@@ -135,7 +132,7 @@ main {
 .content-container-inner > img {
   display: block;
   width: 50%;
-  max-width: 300px;
+  /* max-width: 300px; */
   border: 1px solid #333;
   border-radius: 5px;
   box-shadow: 0px 1px 2px rgba(0,0,0,0.25);
@@ -143,8 +140,9 @@ main {
 }
 
 .content-container-inner[data-open] > img {
-  margin: 0 25px 10px 0;
+  margin: 0 40px 10px 0;
   float: left;
+  border-radius: 25px;
   box-shadow: 0px 3px 6px rgba(0,0,0,0.25);
 }
 
